k8s-manifests/monitoring/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    proyecto: Kuro-Custom
